--- a/index.html
+++ b/index.html
@@ -1,147 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
             <img src="" alt="">
         </div>
 
-    <button class="nav-toggle" aria-label="toggle navigation">
+        <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
     </button>
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-            <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-            <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
 
-        </ul>
-    </nav>
-    </header>
-        <!--INTRODUCTION PART-->
-
-        <section class="intro" id="home">
-            <h1 class="section__title section__title--intro">
-                Hi, I am <strong>Amogast Praxedius</strong>
-            </h1>
-            <p class="section__subtitle section__subtitle--intro">FRONT-END DEV</p>
-            <img src="./img/profile.jpg" alt="Amo's picture" class="intro__img">
-        </section>
-
-        <!---MY SERVICES PART--->
-
-        <section class="my-services" id="services">
-            <h1 class="section__subtitle section__subtitle--services"> What I Do</h1>
-            <div class="services">
-                <div class="service">
-                    <h3>Web Design</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut asperiores sunt ea
-                    tempora error! Adipisci temporibus perspiciatis eligendi rerum ullam? Perferendis unde \
-                    aliquid modi, incidunt consequatur sit molestias aliquam sapiente?</p>
-                    <!-- /Services-->
-                </div>
-                <div class="service">
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque culpa eos impedit,
-                        consequatur odit iusto fugit magni obcaecati commodi sint ad placeat debitis
-                         eveniet temporibus a quos possimus nesciunt quae.</p>
-                    <!-- /Services-->
-                </div>
-                <div class="service">
-                    <h3>E-Commerce</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur expedita ali
-                        quam molestiae consequuntur vel, eos perspiciatis repellendus reiciendis eius
-                        consequatur? Consequatur nesciunt repellat quibusdam maiores provident eum at
-                        ullam corporis.</p>
-                    <!-- /Services-->
-                </div>
-                <a href="#work" class="btn">My Work</a>
-            </div>
-        </section>
-
-        <!---ABOUT ME PART-->
-        <section class="about-me" id="about">
-            <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Designer & Developer</p>
-            <div class="about-me__body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ma
-                    iores fugiat explicabo nemo saepe aliquam! Optio commodi dolorum sit officia accusamus necessitatibus,
-                    vitae, perspiciatis cum quas minus adipisci, fugit rem pariatur.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse nece
-                    ssitatibus quisquam excepturi iure omnis ut nobis, molestiae vel, deleniti,
-                     ullam ipsa error officia. Ratione exercitationem cum eaque quae molestiae?</p>
-                <img src="./img/leaning.jpg" alt="Amo leans" class="about-me__img">
-            </div>
-        </section>
-
-        <!--MY WORK PART-->
-        <section class="my-work" id="work">
-            <h2 class="section__title section__title--work">My Work</h2>
-            <p class="section__subtitle"></p>
-            <div class="portfolio">
-                <!---Portfolio Item-->
-                <a href="#" class="portfolio__item">
-                    <img src="./img/port6.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!---Portfolio Item-->
-                <a href="#" class="portfolio__item">
-                    <img src="./img/port5.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!---Portfolio Item-->
-                <a href="#" class="portfolio__item">
-                    <img src="./img/port2.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!---Portfolio Item-->
-                <a href="#" class="portfolio__item">
-                    <img src="./img/port1.jpg" alt="" class="portfolio__img">
-                </a>
-
-                <!---Portfolio Item-->
-                <a href="#" class="portfolio__item">
-                    <img src="./img/port3.jpg" alt="" class="portfolio__img">
-                </a>
-            </div>
-        </section>
-
-        <!--Footer-->
-        <footer>
-            <a href="mailto:gwijitech@yahoo.com" class="footer__link">gwijitechnologies.com</a>
-            <ul class="social-list">
-                <li class="social-list__item">
-                  <a class="social-list__link" href="#">
-                    <i class=""></i>
-                  </a>
-                </li>
-                <li class="social-list__item">
-                  <a class="social-list__link" href="#">
-                    <i class=""></i>
-                  </a>
-                </li>
-                <li class="social-list__item">
-                  <a class="social-list__link" href="#">
-                    <i class=""></i>
-                  </a>
-                </li>
-                <li class="social-list__item">
-                  <a class="social-list__link" href="#">
-                    <i class=""></i>
-                  </a>
-                </li>
             </ul>
-        </footer>
+        </nav>
+    </header>
+    <!--INTRODUCTION PART-->
 
-        <script src="./index.js"></script>
+    <section class="intro" id="index">
+        <h1 class="section__title section__title--intro">
+            Hi, I am <strong>Amogast Praxedius</strong>
+        </h1>
+        <p class="section__subtitle section__subtitle--intro">FRONT-END DEV</p>
+        <img src="./img/profile.jpg" alt="Amo's picture" class="intro__img">
+    </section>
+
+    <!---MY SERVICES PART--->
+
+    <section class="my-services" id="services">
+        <h1 class="section__subtitle section__subtitle--services"> What I Do</h1>
+        <div class="services">
+            <div class="service">
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut asperiores sunt ea tempora error! Adipisci temporibus perspiciatis eligendi rerum ullam? Perferendis unde \ aliquid modi, incidunt consequatur sit molestias aliquam sapiente?</p>
+                <!-- /Services-->
+            </div>
+            <div class="service">
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque culpa eos impedit, consequatur odit iusto fugit magni obcaecati commodi sint ad placeat debitis eveniet temporibus a quos possimus nesciunt quae.</p>
+                <!-- /Services-->
+            </div>
+            <div class="service">
+                <h3>E-Commerce</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur expedita ali quam molestiae consequuntur vel, eos perspiciatis repellendus reiciendis eius consequatur? Consequatur nesciunt repellat quibusdam maiores provident eum at ullam
+                    corporis.</p>
+                <!-- /Services-->
+            </div>
+            <a href="#work" class="btn">My Work</a>
+        </div>
+    </section>
+
+    <!---ABOUT ME PART-->
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">Who I am</h2>
+        <p class="section__subtitle section__subtitle--about">Designer & Developer</p>
+        <div class="about-me__body">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ma iores fugiat explicabo nemo saepe aliquam! Optio commodi dolorum sit officia accusamus necessitatibus, vitae, perspiciatis cum quas minus adipisci, fugit rem pariatur.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati esse nece ssitatibus quisquam excepturi iure omnis ut nobis, molestiae vel, deleniti, ullam ipsa error officia. Ratione exercitationem cum eaque quae molestiae?</p>
+            <img src="./img/leaning.jpg" alt="Amo leans" class="about-me__img">
+        </div>
+    </section>
+
+    <!--MY WORK PART-->
+    <section class="my-work" id="work">
+        <h2 class="section__title section__title--work">My Work</h2>
+        <p class="section__subtitle"></p>
+        <div class="portfolio">
+            <!---Portfolio Item-->
+            <a href="#" class="portfolio__item">
+                <img src="./img/port6.jpg" alt="" class="portfolio__img">
+            </a>
+
+            <!---Portfolio Item-->
+            <a href="#" class="portfolio__item">
+                <img src="./img/port5.jpg" alt="" class="portfolio__img">
+            </a>
+
+            <!---Portfolio Item-->
+            <a href="#" class="portfolio__item">
+                <img src="./img/port2.jpg" alt="" class="portfolio__img">
+            </a>
+
+            <!---Portfolio Item-->
+            <a href="#" class="portfolio__item">
+                <img src="./img/port1.jpg" alt="" class="portfolio__img">
+            </a>
+
+            <!---Portfolio Item-->
+            <a href="#" class="portfolio__item">
+                <img src="./img/port3.jpg" alt="" class="portfolio__img">
+            </a>
+        </div>
+    </section>
+
+    <!--Footer-->
+    <footer>
+        <a href="mailto:gwijitech@yahoo.com" class="footer__link">gwijitechnologies.com</a>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a class="social-list__link" href="#">
+                    <i class=""></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="#">
+                    <i class=""></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="#">
+                    <i class=""></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="#">
+                    <i class=""></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+
+    <script src="./index.js"></script>
 
 </body>
+
 </html>
